# dtocean

./: CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  pyproject.toml
.github/actions/poetry-install/: action.yml
.github/actions/semantic-release-calver/: action.yml
.github/workflows/: docs.yml  polite-config.yml  release.yml  test-dtocean-app.yml  test-dtocean-core.yml  test-dtocean-docs.yml  test-dtocean-dummy-module.yml  test-dtocean-hydrodynamics.yml  test-dtocean-qt.yml  test-dtocean.yml  test-mdo-engine.yml  test-polite-config.yml
docs/: README.md  index.rst
docs/user/: getting_started_2.rst
main/: genindex.html  index.html  objects.inv  search.html  searchindex.js
main/_static/: documentation_options.js
main/user/: data_preparation.html  getting_started_1.html  getting_started_2.html  gui.html  install.html  intro.html
root-v1.0.0/: genindex.html  index.html  search.html
root-v1.0.0/technical/: database.html  datamanagement.html  datastructures.html  designreq.html  introduction.html  mainapp.html  modules.html  sysreq.html  themes.html
root-v1.0.0/user/: abstract.html  gui.html  modules.html  overview.html  preprocessing.html  references.html  softinstall.html  sysreq.html  themes.html
root-v2.0.0/: genindex.html  index.html  search.html
root-v2.0.0/user/: data_preparation.html  getting_started_1.html  getting_started_2.html  gui.html  install.html  intro.html
scripts/: calver.py  dtocean_commit_parser.py  pre-build.py
