[tool.poetry]
version = "2025.9.12.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

[tool.poetry.group.dtocean.dependencies]
dtocean = { path = "packages/dtocean", develop = true }

[tool.poetry.group.dtocean-app.dependencies]
dtocean-app = { path = "packages/dtocean-app", develop = true }

[tool.poetry.group.dtocean-core.dependencies]
dtocean-core = { path = "packages/dtocean-core", develop = true }

[tool.poetry.group.dtocean-docs.dependencies]
dtocean-docs = { path = "packages/dtocean-docs", develop = true }

[tool.poetry.group.dtocean-dummy-module.dependencies]
dtocean-dummy-module = { path = "packages/dtocean-dummy-module", develop = true }

[tool.poetry.group.dtocean-hydrodynamics.dependencies]
dtocean-hydrodynamics = { path = "packages/dtocean-hydrodynamics", develop = true }

[tool.poetry.group.dtocean-qt.dependencies]
dtocean-qt = { path = "packages/dtocean-qt", develop = true }

[tool.poetry.group.mdo-engine.dependencies]
mdo-engine = { path = "packages/mdo-engine", develop = true }

[tool.poetry.group.polite-config.dependencies]
polite-config = { path = "packages/polite-config", develop = true }

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx-rtd-theme = "^3.0.2"
sphinx-multiversion = {git = "https://github.com/sphinx-contrib/multiversion.git"}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mock = "^5.1.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-env = "^1.1.5"
pytest-mock = "^3.14.0"
pytz = "^2025.2"

[tool.poetry.group.test-qt]
optional = true

[tool.poetry.group.test-qt.dependencies]
pyside6 = "^6.8.1.1"
pytest-qt = "^4.5.0"

[tool.poetry.group.test-postgresql]
optional = true

[tool.poetry.group.test-postgresql.dependencies]
pytest-postgresql = "^7.0.1"

[tool.poetry.group.audit]
optional = true

[tool.poetry.group.audit.dependencies]
ruff = "^0.8.3"
pyright = "^1.1.395"
deptry = "^0.21.1"
pandas-stubs = "^2.2.3.241126"

[tool.poetry.group.release]
optional = true

[tool.poetry.group.release.dependencies]
python-semantic-release = "^10.5.3"

